<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignInActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:padding="30dp">

        <ImageView
            android:id="@+id/ic_first2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_sign_in"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_hello"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tv_hello"
            android:layout_width="150sp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sfpro_medium"
            android:text="@string/hello_welcome"
            android:textColor="@color/black"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="@id/ic_first2"
            app:layout_constraintEnd_toStartOf="@id/ic_first2"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/phone_number_or_email"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:paddingBottom="22dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/ic_first2" />

        <EditText
            android:id="@+id/ev_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:paddingBottom="22dp"
            app:layout_constraintTop_toBottomOf="@id/et_email" />

        <Button
            android:id="@+id/btn_back"
            android:layout_width="128dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="68dp"
            android:backgroundTint="#2196F3"
            android:fontFamily="@font/sfpro_medium"
            android:text="@string/back"
            android:textAllCaps="false"
            android:padding="16dp"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ev_password"
            tools:targetApi="lollipop" />
        <Button
            android:id="@+id/bv_singin"
            android:layout_width="128dp"
            android:textSize="20sp"
            android:layout_height="wrap_content"
            android:layout_marginTop="68dp"
            android:backgroundTint="#2196F3"
            android:fontFamily="@font/sfpro_medium"
            android:padding="16dp"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ev_password"
            tools:targetApi="lollipop" />

        <TextView
            android:id="@+id/tv_orSign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="38dp"
            android:fontFamily="@font/sfpro_medium"
            android:text="@string/or_sign_in_with"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bv_singin" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:src="@drawable/social_media"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_orSign"
            tools:ignore="ContentDescription"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>